tests/fixtures/pass/vec_borrow.sali
let Resource = struct(value: i32)

extend Resource {
  let read(borrow self)(): i32 = self.value
}

let main(): i32 = {
  let mut values: Vec(Resource) = Vec(Resource).new()
  values.push(Resource(20))
  values.push(Resource(0))
  let first = do {
    let reference = values.at(0)
    reference.read()
  }
  do {
    let reference = values.at_mut(1)
    reference.value = 22
  }
  let second = do {
    let reference = values.at(1)
    reference.read()
  }
  first + second
}
